<resources>
    <string name="app_name">TP-Mobile</string>
    <string name="hello">Bonjour</string>
    <string name="label_decimal">Decimal</string>
    <string name="btn_convert_decimal_label">Convert from decimal</string>
    <string name="label_binary">Binary</string>
    <string name="btn_convert_from_binary_label">Convert from binary</string>
    <string name="btn_convert_from_hexadecimal_label">Convert from hexadecimal</string>
    <string name="label_hexadecimal">Hexadecimal</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="metres_pieds"><![CDATA[Metres <-> Pieds]]></string>
    <string name="mon_convertisseur">Mon Convertisseur</string>
    <string name="kilogrammes_livres"><![CDATA[Kilogrammes <-> Livres]]></string>
    <string name="metres_pouces"><![CDATA[Metres <-> Pouces]]></string>
    <string name="miles_heure_kilometre_heure"><![CDATA[Miles/Heure <-> KIlometre/Heure]]></string>
</resources>